--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -360,19 +360,20 @@ textarea {
 	color: var(--thm-black);
 }
 .atf-one__btn {
-	border-radius: 5px;
-	color: #fff;
-	transition: all .5s ease;
-	text-align: left;
-	width: 200px;
-	position: relative;
-	height: 75px;
-	padding-left: 70px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	overflow: hidden;
-	background-image: linear-gradient(90deg,var(--thm-base),var(--thm-color));
+    border-radius: 5px;
+    color: #000000;
+    transition: all .5s ease;
+    text-align: left;
+    width: 200px;
+    position: relative;
+    height: 75px;
+    padding-left: 70px;
+    display: flex
+;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    background-image: linear-gradient(90deg, var(--thm-base), var(--thm-color));
 }
 .atf-one__btn::after, .atf-one__btn::before {
 	content: "";
@@ -399,21 +400,20 @@ textarea {
 	bottom: 2px;
 	transform: scale(1);
 	transform-origin: right;
-	background-color: #242b4b;
+	background-color: #ffc107;
 }
 .atf-one__btn i {
-	position: absolute;
-	z-index: 10;
-	top: 50%;
-	left: 20px;
-	transform: translateY(-50%);
-	font-size: 30px;
-	background-image: linear-gradient(-90deg,var(--thm-color2),var(--thm-base));
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	border-right: 1px solid #ddd;
-	padding-right: 10px;
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+    font-size: 30px;
+    color: #000; /* ← color negro */
+    border-right: 1px solid #ddd;
+    padding-right: 10px;
 }
+
 .atf-one_btn-watch i {
 	left: 30px ! important;
 }
